[package]
name = "tree-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-elm = "5.6.3"
tree-sitter-ruby = "0.21"
tree-sitter-rust = "0.21"
tree-sitter = "0.21"
console = "^0.15"
tree-sitter-go = "0.19.1"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-mdx = { git = "https://github.com/jlopezcur/tree-sitter-mdx" }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json" }
tree-sitter-python = "0.21"
tree-sitter-md = "0.2.3"
# tree-sitter-cobol = { path = "../../tree-sitter-cobol/" }

[dependencies.notify]
version = "5.0.0"
default-features = false
